--- a/package.json
+++ b/package.json
@@ -7,13 +7,6 @@
 	"funding": "https://github.com/chalk/chalk?sponsor=1",
 	"type": "module",
 	"exports": "./source/index.js",
-	"imports": {
-		"#ansi-styles": "./source/vendor/ansi-styles/index.js",
-		"#supports-color": {
-			"node": "./source/vendor/supports-color/index.js",
-			"default": "./source/vendor/supports-color/browser.js"
-		}
-	},
 	"types": "./source/index.d.ts",
 	"engines": {
 		"node": "^12.17.0 || ^14.13 || >=16.0.0"
@@ -73,5 +66,9 @@
 		"exclude": [
 			"source/vendor"
 		]
+	},
+	"dependencies": {
+		"ansi-styles": "^6.1.0",
+		"supports-color": "^9.2.1"
 	}
 }
